@@ -25,6 +25,7 @@ import java.util.*;
  <li>Fifteen problems drawn from "Accuracy in Symbolic Regression" (GPEM 2011), by Michael Korns.  These are known as <b>KORNS1</b> through <b>KORNS15</b>
  <li>Fifteen problems drawn from "Improving Symbolic Regression with Interval Arithmetic and Linear Scaling" (EuroGP 2003), by Maarten Keijzer.  These are known as <b>keijzer-1</b> through <b>keijzer-15</b>
  <li>Fifteen problems drawn from "Order of Nonlinearity as a Complexity Measure for Models Generated by Symbolic Regression via Pareto Genetic Programming" (IEEE TransEC 13:2), by Ekaterina J. Vladislavleva, Guido F. Smits, and Dick den Hertog.  These are known as <b>vladislavleva-1</b> through <b>vladislavleva-8</b>
+ <li>Two problems drawn from "Evolutionary Consequences of Coevolving Targets" (Evolutionary Computation 5(4)) by Ludo Pagie and Paulien Hogeweg, 1997.
  <li>You can also provide your own data sets via a text file.
 
  <p>These problems differ in a variety of ways.  Some have both training and testing data points.  Some have one variable, others up to five variables.  Some build their random points based on random samples, other based on a grid of samples distributed through the space.  Different problems also use different function sets.
@@ -465,9 +466,6 @@ public class Benchmarks extends GPProblem implements SimpleProblemForm
 
 
 
-    ///// Output Sample Generation
-
-
 
 
     /** Return the function applied to the given data by benchmark problem.  */
@@ -853,8 +851,7 @@ public class Benchmarks extends GPProblem implements SimpleProblemForm
             }
                         
         // set up our input -- don't want to use the default base, it's unsafe
-        data = (RegressionData) state.parameters.getInstanceForParameterEq(
-            base.push(P_DATA), null, RegressionData.class);
+        data = (RegressionData) state.parameters.getInstanceForParameterEq(base.push(P_DATA), null, RegressionData.class);
         data.setup(state,base.push(P_DATA));
         }
 
