@@ -29,6 +29,9 @@ import java.util.zip.*;
 public class Log implements Serializable
     {
     // basic log features
+    
+    /** Should we write to this log at all? */
+    public boolean muzzle = false;
 
     /** The log's writer */
     public transient PrintWriter writer;   // the actual writer.
